<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginBottom="8dp"
    android:background="@drawable/card_background"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingVertical="8dp"
    tools:context=".SetsProgressFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sets_progress_card_title"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/setsProgressText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/setsProgressPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/setsProgressIndicator"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginBottom="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabUndoSet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/undo_set_button"
            android:src="@drawable/chevron_backward_24px"
            app:fabCustomSize="40dp"
            app:fabSize="mini" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabCompleteSet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/complete_set_button"
            android:src="@drawable/chevron_forward_24px" />
    </LinearLayout>

</LinearLayout>
