<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context=".ExerciseDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginBottom="12dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="64dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_dumbbell"
                android:contentDescription="@string/exercise_image" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/header_gradient" />

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:navigationContentDescription="@string/back_button"
                app:navigationIcon="@drawable/chevron_backward_24px" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="28sp" />

                <LinearLayout
                    android:id="@+id/badge_row_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />

                <LinearLayout
                    android:id="@+id/badge_row_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />

            </LinearLayout>

        </FrameLayout>

        <!--    Card de execução-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/card_background"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/execution_card_title"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <!--    Card de progresso das séries (SetsProgressFragment)-->
        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/setsProgressContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!--    Card de detalhes-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/card_background"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details"
                android:textSize="22sp" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp" />

            <include
                android:id="@+id/muscleGroupRow"
                layout="@layout/detail_row_layout" />

            <include
                android:id="@+id/equipmentRow"
                layout="@layout/detail_row_layout" />

            <include
                android:id="@+id/repsRow"
                layout="@layout/detail_row_layout" />

            <include
                android:id="@+id/weightRow"
                layout="@layout/detail_row_layout" />

            <include
                android:id="@+id/restRow"
                layout="@layout/detail_row_layout" />

            <include
                android:id="@+id/notesRow"
                layout="@layout/detail_row_layout" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
